--- a/PI_Emi_Tania/PI_Emi_Tania/src/main/resources/static/js/odontologo.html
+++ b/PI_Emi_Tania/PI_Emi_Tania/src/main/resources/static/js/odontologo.html
@@ -8,8 +8,7 @@
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-   <script type="text/javascript" src="/js/post_odontologo.js"></script>
-   <script src="/js/list_odontologos.js"></script>
+
 </head>
 <body>
 <div class="container">
@@ -60,6 +59,9 @@
       <tbody id="odontologos-list"></tbody>
    </table>
 </div>
+
+<script type="text/javascript" src="static/js/post_odontologo.js"></script>
+<script type="text/javascript" src="static/js/list_odontologos.js"></script>
 </body>
 </html>
 
