--- a/PI_Emi_Tania/PI_Emi_Tania/src/main/resources/static/odontologo.html
+++ b/PI_Emi_Tania/PI_Emi_Tania/src/main/resources/static/odontologo.html
@@ -43,7 +43,7 @@
          <form id="update_odontologo">
             <div class="form-group">
                <label class="control-label" for="update_matricula">Matricula:</label>
-               <input type="text" class="form-control" id="update_matricula" placeholder="Ingrese la nueva matricula" name="update_matricula" required>
+               <input type="text" class="form-control" id="update_matricula" placeholder="Ingrese la matricula a actualizar" name="update_matricula" required>
             </div>
             <div class="form-group">
                <label class="control-label" for="update_nombre">Nombre:</label>
@@ -86,10 +86,10 @@
    </table>
 </div>
 
-<script type="text/javascript" src="static\js\post_odontologos.js"></script> 
-<script type="text/javascript" src="static\js\list_odontologos.js"></script>
-<script type="text/javascript" src="static\js\update_odontologo.js"></script>
-<script type="text/javascript" src="static\js\delete_odontologo.js"></script>
+<script type="text/javascript" src="\js\post_odontologo.js"></script> 
+<script type="text/javascript" src="\js\list_odontologos.js"></script>
+<script type="text/javascript" src="\js\update_odontologo.js"></script>
+<script type="text/javascript" src="\js\delete_odontologo.js"></script>
 </body>
 </html>
 
