Test con errores de turno

--- a/PI_Emi_Tania/PI_Emi_Tania/src/main/resources/static/index.html
+++ b/PI_Emi_Tania/PI_Emi_Tania/src/main/resources/static/index.html
@@ -30,7 +30,7 @@
                             <h5 class="card-title">Paciente</h5>
                         </div>
                         <div class="card-body">
-                            <a href="paciente.html" class="btn btn-primary">Operaciones</a>
+                            <a href="pacientes.html" class="btn btn-primary">Operaciones</a>
                         </div>
                     </div>
                 </div>
@@ -49,7 +49,7 @@
         </div>
     </div>
 </div>
-
+<script src="/static/js/Paciente/post.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
