--- a/PI_Emi_Tania/PI_Emi_Tania/src/main/resources/static/odontologo.html
+++ b/PI_Emi_Tania/PI_Emi_Tania/src/main/resources/static/odontologo.html
@@ -92,10 +92,11 @@
    </table>
 </div>
 
-<script type="text/javascript" src="static\js\post_odontologo.js"></script>
-<script type="text/javascript" src="static\js\list_odontologos.js"></script>
-<script type="text/javascript" src="static\js\update_odontologo.js"></script>
-<script type="text/javascript" src="static\js\delete_odontologo.js"></script>
+<script type="text/javascript" src="js\odontologo\post_odontologo.js"></script>
+<script type="text/javascript" src="js\odontologo\list_odontologos.js"></script>
+<script type="text/javascript" src="js\odontologo\update_odontologo.js"></script>
+<script type="text/javascript" src="js\odontologo\delete_odontologo.js"></script>
+
 </body>
 </html>
 
