--- a/PI_Emi_Tania/PI_Emi_Tania/src/main/resources/static/odontologo.html
+++ b/PI_Emi_Tania/PI_Emi_Tania/src/main/resources/static/odontologo.html
@@ -47,7 +47,7 @@
             </div>
             <div class="form-group">
                <label class="control-label" for="update_matricula">Matricula:</label>
-               <input type="text" class="form-control" id="update_matricula" placeholder="Ingrese la matricula a actualizar" name="update_matricula" required>
+               <input type="text" class="form-control" id="update_matricula" placeholder="Ingrese la nueva matricula" name="update_matricula" required>
             </div>
             <div class="form-group">
                <label class="control-label" for="update_nombre">Nombre:</label>
